@@ -54,8 +54,7 @@ public class BlobStoreController extends GWCController {
             return blobStores.getBlobStore(blobStoreName);
         } catch (GeoWebCacheException e) {
             throw new RestException(
-                    String.format(
-                            "Failed to get BlobStoreInfo. A BlobStoreInfo with name \"%s\" does not exist.",
+                    "Failed to get BlobStoreInfo. A BlobStoreInfo with name \"%s\" does not exist.".formatted(
                             blobStoreName),
                     HttpStatus.NOT_FOUND,
                     e);
@@ -83,8 +82,7 @@ public class BlobStoreController extends GWCController {
             blobStores.removeBlobStore(blobStoreName);
         } else {
             throw new RestException(
-                    String.format(
-                            "Failed to remove BlobStoreInfo. A BlobStoreInfo with name \"%s\" does not exist.",
+                    "Failed to remove BlobStoreInfo. A BlobStoreInfo with name \"%s\" does not exist.".formatted(
                             blobStoreName),
                     HttpStatus.NOT_FOUND);
         }
